--- a/test/css/styles.css
+++ b/test/css/styles.css
@@ -41,7 +41,7 @@ section {
 }
 
 body {
-  font-family: "Cabin", Arial, Tahoma, sans-serif;
+  font-family: "Arial", Arial, Tahoma, sans-serif;
   line-height: 1em;
   font-weight: 400;
 }
@@ -87,36 +87,18 @@ ol {
 }
 
 @font-face {
-  font-family: "Montserrat";
-  src: url("../fonts/Montserrat-Bold.eot");
-  src: url("../fonts/Montserrat-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/Montserrat-Bold.woff") format("woff"), url("../fonts/Montserrat-Bold.ttf") format("truetype");
+  font-family: "Helvetica";
+  src: url("../fonts/HelveticaNeueCyr-Bold.eot");
+  src: url("../fonts/HelveticaNeueCyr-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/HelveticaNeueCyr-Bold.woff") format("woff"), url("../fonts/HelveticaNeueCyr-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Cabin";
-  src: url("../fonts/Cabin-Bold.eot");
-  src: url("../fonts/Cabin-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/Cabin-Bold.woff") format("woff"), url("../fonts/Cabin-Bold.ttf") format("truetype");
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Cabin";
-  src: url("../fonts/Cabin-SemiBold.eot");
-  src: url("../fonts/Cabin-SemiBold.eot?#iefix") format("embedded-opentype"), url("../fonts/Cabin-SemiBold.woff") format("woff"), url("../fonts/Cabin-SemiBold.ttf") format("truetype");
-  font-weight: 600;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Cabin";
-  src: url("../fonts/Cabin-Regular.eot");
-  src: url("../fonts/Cabin-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/Cabin-Regular.woff") format("woff"), url("../fonts/Cabin-Regular.ttf") format("truetype");
+  font-family: "Helvetica";
+  src: url("../fonts/HelveticaNeueCyr-Medium.eot");
+  src: url("../fonts/HelveticaNeueCyr-Medium.eot?#iefix") format("embedded-opentype"), url("../fonts/HelveticaNeueCyr-Medium.woff") format("woff"), url("../fonts/HelveticaNeueCyr-Medium.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -167,198 +149,179 @@ ol {
 }
 
 body {
-  width: 100vw;
-  overflow-x: hidden;
-  padding-top: 74px;
-  padding-bottom: 86px;
-  -webkit-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+  background: #1a1a1a;
 }
 
-body:not(.red) .var__dark {
-  display: none;
+.button {
+  display: block;
+  background: #d0021b;
+  background: -webkit-gradient(linear, left top, left bottom, from(#d0021b), to(#8e0011));
+  background: -o-linear-gradient(top, #d0021b 0%, #8e0011 100%);
+  background: linear-gradient(180deg, #d0021b 0%, #8e0011 100%);
+  -webkit-box-shadow: 0px 1px 17px rgba(255, 0, 13, 0.23);
+  box-shadow: 0px 1px 17px rgba(255, 0, 13, 0.23);
+  font-family: "Helvetica";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 28px;
+  text-align: center;
+  color: #ffffff;
+  padding-top: 7px;
+  padding-bottom: 11px;
+  width: 100%;
 }
 
-body.red {
-  background: #d64447;
+.buttonsWrapper .button {
+  padding-top: 3px;
+  padding-bottom: 4px;
+  height: 26px;
+  margin-bottom: 7px;
+  font-size: 16px;
+  line-height: 22px;
 }
 
-body.red .var__red {
-  display: none;
+.buttonsWrapper .button:last-child {
+  margin-bottom: 0;
 }
 
-body.red .header__logoIcon svg {
-  fill: #ffffff;
-}
-
-body.red .button {
-  color: #000000;
-  background: #ffffff;
-}
-
-body.red .select:not(.active) .select__cnt {
+.title {
+  font-family: "Helvetica";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 33px;
   color: #ffffff;
 }
 
-.select {
-  position: relative;
-  outline: none;
+.minTitle {
+  font-family: "Helvetica";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 28px;
+  text-align: center;
+  color: #ffffff;
+}
+
+.text {
+  font-family: "Helvetica";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 17px;
+  color: #cccccc;
+}
+
+.w700 {
+  font-weight: 700;
+}
+
+.w400 {
+  font-weight: 400;
+}
+
+.cWh {
+  color: #ffffff;
+}
+
+.cDr {
+  color: #131313;
+}
+
+.logo {
+  width: 97px;
   height: 24px;
 }
 
-.select__mainBtn {
-  background: transparent;
-  outline: none;
-  position: relative;
-  z-index: 2;
-}
-
-.select__input {
-  display: none;
-}
-
-.select__cnt {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
-  width: 48px;
-  height: 24px;
-}
-
-.select__cnt img {
-  margin-right: 6px;
+.logo img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+  object-fit: contain;
   display: block;
 }
 
-.select__cntRight {
-  position: absolute;
-  right: -20px;
-  top: 50%;
-  -webkit-transform: translateY(-60%);
-  -ms-transform: translateY(-60%);
-  transform: translateY(-60%);
+.flags {
+  max-width: 21px;
+  width: 100%;
 }
 
-.select__list {
-  padding: 16px 0;
-  padding-top: 40px;
-  padding-bottom: 0px;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  z-index: 1;
-  -webkit-transition: all 0.12s ease-in-out;
-  -o-transition: all 0.12s ease-in-out;
-  transition: all 0.12s ease-in-out;
-}
-
-.select__list::before {
-  content: "";
-  background: #f4f5f8;
-  position: absolute;
-  top: -5px;
-  left: -5px;
-  right: -25px;
-  bottom: -5px;
-  z-index: -10;
-  border-radius: 3px;
-}
-
-.select__item {
-  display: block;
-}
-
-.select__itemBtn span {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
-  width: 48px;
-  height: 24px;
-}
-
-.select__itemBtn img {
-  margin-right: 6px;
-  display: block;
-}
-
-.select:not(.active) .select__list {
-  -webkit-transform: translateX(-100vw);
-  -ms-transform: translateX(-100vw);
-  transform: translateX(-100vw);
+.flags img {
+  max-height: 21px;
 }
 
 .header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  padding: 40px 0 10px;
-  z-index: 1000;
+  background: url("../img/headerBg.png") center/100% 100% no-repeat;
 }
 
 .header__wrapper {
+  padding-bottom: 7px;
+  padding-top: 7px;
   position: relative;
-  padding-left: 4px;
-  padding-right: 4px;
-  max-width: 560px;
+  max-width: 540px;
   margin: auto;
 }
 
-.header__logo {
-  position: relative;
-  z-index: 10;
-  width: 96px;
+.header__wrapper .logo {
   margin: auto;
 }
 
-.header__logoBg {
+.header__wrapper .flags {
   position: absolute;
-  bottom: 0;
-  left: 0;
-  -webkit-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  transform: translateX(-50%);
-  z-index: -10;
-}
-
-.header__logoIcon {
-  width: 96px;
-}
-
-.header__logoIcon svg {
-  width: 100%;
-  fill: black;
-}
-
-.header__logoIcon svg path {
-  fill: inherit;
-}
-
-.header__select {
-  position: absolute;
-  left: 14px;
+  right: 12px;
   top: 50%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
 
-.var:not(.active) {
-  display: none;
+.timer {
+  padding: 6px 10px 18px;
+}
+
+.timer__wrapper {
+  background: #121212;
+  padding-bottom: 10px;
+  padding-top: 6px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+  -ms-flex-align: end;
+  align-items: flex-end;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  max-width: 540px;
+  margin: auto;
+}
+
+.timer__text {
+  font-family: "Helvetica";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 17px;
+  color: #5e5e5e;
+}
+
+.timer__timer {
+  margin-left: 9px;
+  font-family: "Helvetica";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 19px;
+  color: #ffffff;
+}
+
+.timer__timer:first-child {
+  margin-left: 0;
+}
+
+.timer__letter {
+  color: #d0021b;
 }
 
 .pageWrapper {
@@ -369,20 +332,10 @@ body.red .select:not(.active) .select__cnt {
   position: relative;
 }
 
-.main-content {
-  max-width: 560px;
-  margin: auto;
-}
-
 .page {
-  padding-bottom: 90px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+  padding-top: 6px;
+  padding-left: 10px;
+  padding-right: 10px;
   -webkit-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
@@ -390,120 +343,260 @@ body.red .select:not(.active) .select__cnt {
   top: 0;
   left: 0;
   right: 0;
-  padding-left: 12px;
-  padding-right: 12px;
 }
 
 .page > .button {
-  margin-top: auto;
-  position: fixed;
-  bottom: 20px;
-  width: 100%;
-  width: calc(100% - 40px);
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  transform: translateX(-50%);
-  max-width: 560px;
+  margin-top: 30px;
 }
 
 .page.leftNone {
   -webkit-transform: translateX(-120vw);
   -ms-transform: translateX(-120vw);
   transform: translateX(-120vw);
+  height: 50%;
 }
 
 .page.rightNone {
   -webkit-transform: translateX(120vw);
   -ms-transform: translateX(120vw);
   transform: translateX(120vw);
-}
-
-.page.button:last-child {
-  margin-top: auto;
+  height: 50%;
 }
 
 .page1 {
-  min-height: 100vh;
+  position: relative;
+  z-index: 1;
+}
+
+.page1__img {
+  text-align: center;
+  margin: 20px auto;
+}
+
+.page1 p {
+  margin-bottom: 12px;
+}
+
+.page1 p:last-child {
+  margin-bottom: 0;
+}
+
+.page1:before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -10;
+  background: url("../img/bg.png") 60% top/auto no-repeat;
+}
+
+.pageQuiz {
+  height: 100%;
+  z-index: 2;
+}
+
+.pageQuiz:before {
+  content: "";
+  z-index: -10;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #000000;
+  opacity: 0.8;
+}
+
+.pageQuiz .buttonsWrapper {
+  margin-top: 7px;
+}
+
+.pageQuiz .text {
+  color: #131313;
+}
+
+.pageQuiz__quiz {
+  position: fixed;
+  left: 10px;
+  right: 10px;
+  bottom: 12px;
+}
+
+.pageQuiz__top {
+  background: #ffffff;
+}
+
+.pageQuiz__title {
+  background: #e1e1e1;
+  padding: 4px 11px 6px;
+}
+
+.pageQuiz__answer {
+  padding: 7px 11px 12px;
+  min-height: 47px;
+}
+
+.page9 {
+  background: #ffffff;
+  height: 474px;
+}
+
+.page9:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #000000;
+  opacity: 0.4;
+}
+
+.page9__block {
+  -webkit-transform: translateY(20px);
+  -ms-transform: translateY(20px);
+  transform: translateY(20px);
+  position: relative;
+  padding: 10px;
+  padding-bottom: 120px;
+  padding-top: 12px;
+  background: #191919;
+  text-align: center;
+}
+
+.page9__block p {
+  margin-bottom: 15px;
+}
+
+.page9__block p:last-child {
+  margin-bottom: 0;
+}
+
+.page9__block .title {
+  line-height: 33px;
+}
+
+.page9__block::after {
+  content: "";
+  display: block;
+  width: 338px;
+  height: 173px;
+  background: url("../img/bgWn.png") center/100% 100% no-repeat;
+  position: absolute;
+  bottom: -15px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+
+.page9__block .button {
+  max-width: 132px;
+  width: 100%;
+  margin: auto;
+  margin-top: 10px;
+  position: relative;
+  z-index: 2;
+}
+
+.page11.active {
+  height: 100%;
+}
+
+.page11__img {
+  max-width: 80%;
+  margin: auto;
+}
+
+.page11__img img {
+  width: 100%;
+  max-height: 220px;
+  -o-object-fit: contain;
+  object-fit: contain;
+}
+
+.page12:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #000000;
+  opacity: 0.4;
+}
+
+.page13 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  padding-bottom: 30%;
 }
 
-.page1__title {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 40px;
-  line-height: 131%;
-  letter-spacing: 0.03em;
-  color: #000000;
-  text-align: center;
+.page13.active {
+  height: 100%;
 }
 
-.page1__img {
-  max-width: 367px;
+.page13:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #000000;
+  opacity: 0.4;
+}
+
+.page13 .page9__block {
+  padding-top: 72px;
+}
+
+.page13 .pageBoxes__box:active {
+  background-image: url("../img/gift500.png");
+}
+
+.page13__img {
+  width: 183px;
+  height: 103px;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  top: -42px;
+}
+
+.page13__img img {
   width: 100%;
-  margin: 2px auto 0;
-}
-
-.page1__img img {
-  max-width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
   display: block;
 }
 
-.page2__img {
-  max-width: 100%;
-  margin-top: 11px;
-  margin-bottom: 11px;
+.pageBoxes {
+  background: #ffffff;
+  padding: 40px 12px 36px;
 }
 
-.page2__img img {
-  max-width: 100%;
-  width: 100%;
+.pageBoxes.active {
+  height: 100%;
 }
 
-.pageQuest__img {
-  margin: 4px;
-  margin-right: 4px;
-  text-align: center;
-}
-
-.pageQuest__img img {
-  max-width: 100%;
-}
-
-.page10 .pageQuest__img {
-  margin-top: 30px;
-}
-
-.page11 .pageQuest__img {
-  border-radius: 24px;
-  -webkit-filter: drop-shadow(0px 4px 17px rgba(0, 0, 0, 0.37));
-  filter: drop-shadow(0px 4px 17px rgba(0, 0, 0, 0.37));
-}
-
-.page11 .pageQuest__img:nth-child(2) {
-  margin-top: 22px;
-}
-
-.page11 .pageQuest__img:nth-child(3) {
-  margin-top: 38px;
-  margin-bottom: 38px;
-}
-
-.page13__boxs {
-  margin-top: 42px;
+.pageBoxes__wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -512,178 +605,27 @@ body.red .select:not(.active) .select__cnt {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  max-width: 420px;
 }
 
-.page13__box {
-  width: 85px;
-  height: 85px;
-  display: block;
-  margin-bottom: 28px;
+.pageBoxes__box {
+  margin-bottom: 20px;
+  width: 97px;
+  height: 101px;
   -webkit-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-  background: url("../img/gift.png") center/contain no-repeat;
+  background: url("../img/gift.png") center bottom/contain no-repeat;
 }
 
-.page13__box:active {
-  -webkit-transform: scale(3);
-  -ms-transform: scale(3);
-  transform: scale(3);
-  background-image: url("../img/emptyGift.png");
-}
-
-.page15 .page13__box:active {
-  background-image: url("../img/gift50.png");
-}
-
-.page16::before {
-  z-index: -1;
-  position: absolute;
-  content: "";
-  display: block;
-  width: 140%;
-  height: 649px;
-  bottom: -78px;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  transform: translateX(-50%);
-  background: url("../img/win500.png") center/contain no-repeat;
-}
-
-.mainTitle {
-  font-family: "Cabin";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 131%;
-  letter-spacing: 0.03em;
-  color: #000000;
-  text-align: center;
-}
-
-.subTitle {
-  font-family: "Cabin";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 131%;
-  letter-spacing: 0.03em;
-  color: #ffffff;
-  text-align: center;
-}
-
-.title {
-  font-family: "Cabin";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 131%;
-  letter-spacing: 0.03em;
-  color: #000000;
-  margin-bottom: 5px;
-}
-
-.title:last-child {
-  margin-bottom: 0;
-}
-
-.txt16x20 {
-  font-family: "Cabin";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 131%;
-  /* identical to box height, or 21px */
-  letter-spacing: 0.03em;
-  color: #ffffff;
-  margin-bottom: 9px;
-}
-
-.txt16x20:last-child {
-  margin-bottom: 0;
-}
-
-.text {
-  font-family: "Cabin";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 131%;
-  letter-spacing: 0.03em;
-  color: #000000;
-  margin-bottom: 5px;
-}
-
-.text:last-child {
-  margin-bottom: 0;
-}
-
-.w700 {
-  font-weight: 700;
-}
-
-.w600 {
-  font-weight: 600;
-}
-
-.mb50 {
-  margin-bottom: 50px;
-}
-
-.mb40 {
-  margin-bottom: 40px;
-}
-
-.mb32 {
-  margin-bottom: 32px;
-}
-
-.mb22 {
-  margin-bottom: 22px;
-}
-
-.mb12 {
-  margin-bottom: 12px;
-}
-
-.cDr {
-  color: #000;
-}
-
-.dateToday {
-  color: #d64447;
-}
-
-.button {
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 22px;
-  line-height: 131%;
-  letter-spacing: 0.03em;
-  color: #ffffff;
-  text-align: center;
-  padding: 13px 16px;
-  width: 100%;
-  background: #d64447;
-  border-radius: 24px;
-}
-
-.buttonSelects {
-  margin-top: 33px;
-}
-
-.buttonSelects .button {
-  display: block;
-  margin: auto;
-  margin-bottom: 20px;
-  padding: 20px;
-  width: 177px;
-}
-
-.buttonSelects .button:last-child {
-  margin-bottom: 0;
+.pageBoxes__box:active {
+  -webkit-transform: scale(4);
+  -ms-transform: scale(4);
+  transform: scale(4);
+  background-image: url("../img/giftEmpty.png");
 }
 
 /* ================================================= */
@@ -694,57 +636,5 @@ body.red .select:not(.active) .select__cnt {
   .wrapper {
     padding-left: 30px;
     padding-right: 30px;
-  }
-
-  .page13__box:focus {
-    -webkit-transform: scale(3);
-    -ms-transform: scale(3);
-    transform: scale(3);
-    background-image: url("../img/emptyGift.png");
-  }
-}
-
-@media screen and (max-height: 640px) {
-  .buttonSelects {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-  }
-
-  .buttonSelects .button {
-    margin-right: 12px;
-    width: 100%;
-    margin-bottom: 0;
-  }
-
-  .buttonSelects .button:last-child {
-    margin-right: 0;
-  }
-
-  .pageQuest__img {
-    max-width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .pageQuest__img {
-    margin-top: 0;
-    margin-bottom: 8px;
-  }
-
-  .pageQuest__img img {
-    max-height: 160px;
-  }
-
-  .page11 .pageQuest__img:nth-child(3) {
-    margin-top: 0;
-    margin-bottom: 8px;
-  }
-
-  .mb40 {
-    margin-bottom: 20px;
   }
 }
