--- a/test/css/styles.css
+++ b/test/css/styles.css
@@ -488,6 +488,152 @@ ol {
   border-radius: 23px;
 }
 
+.loader {
+  display: inline-block;
+  position: relative;
+  width: 52px;
+  height: 52px;
+}
+
+.loader div {
+  -webkit-transform-origin: 26px 28px;
+  -ms-transform-origin: 26px 28px;
+  transform-origin: 26px 28px;
+  -webkit-animation: lds-spinner 1.2s linear infinite;
+  animation: lds-spinner 1.2s linear infinite;
+}
+
+.loader div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 3px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  width: 1.68px;
+  height: 16px;
+  border-radius: 3px;
+  background: #0c0c0c;
+}
+
+.loader div:nth-child(1) {
+  -webkit-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-animation-delay: -1.1s;
+  animation-delay: -1.1s;
+}
+
+.loader div:nth-child(2) {
+  -webkit-transform: rotate(30deg);
+  -ms-transform: rotate(30deg);
+  transform: rotate(30deg);
+  -webkit-animation-delay: -1s;
+  animation-delay: -1s;
+}
+
+.loader div:nth-child(3) {
+  -webkit-transform: rotate(60deg);
+  -ms-transform: rotate(60deg);
+  transform: rotate(60deg);
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s;
+}
+
+.loader div:nth-child(4) {
+  -webkit-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
+  -webkit-animation-delay: -0.8s;
+  animation-delay: -0.8s;
+}
+
+.loader div:nth-child(5) {
+  -webkit-transform: rotate(120deg);
+  -ms-transform: rotate(120deg);
+  transform: rotate(120deg);
+  -webkit-animation-delay: -0.7s;
+  animation-delay: -0.7s;
+}
+
+.loader div:nth-child(6) {
+  -webkit-transform: rotate(150deg);
+  -ms-transform: rotate(150deg);
+  transform: rotate(150deg);
+  -webkit-animation-delay: -0.6s;
+  animation-delay: -0.6s;
+}
+
+.loader div:nth-child(7) {
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg);
+  -webkit-animation-delay: -0.5s;
+  animation-delay: -0.5s;
+}
+
+.loader div:nth-child(8) {
+  -webkit-transform: rotate(210deg);
+  -ms-transform: rotate(210deg);
+  transform: rotate(210deg);
+  -webkit-animation-delay: -0.4s;
+  animation-delay: -0.4s;
+}
+
+.loader div:nth-child(9) {
+  -webkit-transform: rotate(240deg);
+  -ms-transform: rotate(240deg);
+  transform: rotate(240deg);
+  -webkit-animation-delay: -0.3s;
+  animation-delay: -0.3s;
+}
+
+.loader div:nth-child(10) {
+  -webkit-transform: rotate(270deg);
+  -ms-transform: rotate(270deg);
+  transform: rotate(270deg);
+  -webkit-animation-delay: -0.2s;
+  animation-delay: -0.2s;
+}
+
+.loader div:nth-child(11) {
+  -webkit-transform: rotate(300deg);
+  -ms-transform: rotate(300deg);
+  transform: rotate(300deg);
+  -webkit-animation-delay: -0.1s;
+  animation-delay: -0.1s;
+}
+
+.loader div:nth-child(12) {
+  -webkit-transform: rotate(330deg);
+  -ms-transform: rotate(330deg);
+  transform: rotate(330deg);
+  -webkit-animation-delay: 0s;
+  animation-delay: 0s;
+}
+
+@-webkit-keyframes lds-spinner {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes lds-spinner {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
 .txt50x60 {
   font-family: "Inter";
   font-style: normal;
@@ -540,6 +686,10 @@ ol {
   font-weight: 900;
 }
 
+.w800 {
+  font-weight: 800;
+}
+
 .w600 {
   font-weight: 600;
 }
@@ -574,6 +724,14 @@ ol {
 
 .cDr {
   color: #181818;
+}
+
+.cRed {
+  color: red;
+}
+
+.cGreen {
+  color: #00d83a;
 }
 
 .cGradiend14 {
@@ -851,7 +1009,7 @@ ol {
 
 .review__video .swiperSlide {
   width: 24.5%;
-  width: calc(25% - 17px);
+  width: 367px;
   height: 653px;
   border: 4px solid #a31aff;
   -webkit-box-shadow: 0px 0px 20px -2px #a31aff;
@@ -1061,6 +1219,202 @@ ol {
   text-fill-color: transparent;
 }
 
+.verification {
+  padding-top: 197px;
+}
+
+.verification__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin: auto;
+  position: relative;
+}
+
+.verification__img {
+  margin-right: -22px;
+  width: 654px;
+  height: 729px;
+}
+
+.verification__img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  display: block;
+}
+
+.verification__cnt {
+  padding-top: 80px;
+  text-align: center;
+}
+
+.verification__cnt .txt50x60 {
+  text-align: start;
+}
+
+.verification__verf {
+  margin-top: 16px;
+  padding-left: 23px;
+  padding-right: 23px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.verification .txt20x30 {
+  line-height: 1.1em;
+}
+
+.verification__subTitle {
+  margin-bottom: 22px;
+  max-width: 346px;
+}
+
+.verification__anim {
+  background: #ffffff;
+  border-radius: 17px;
+  padding: 15px 14px 16px;
+  width: 322px;
+  position: relative;
+  z-index: 2;
+}
+
+.verification__anim .loader {
+  margin-bottom: 14px;
+}
+
+.verification__load {
+  margin-top: 12px;
+  background: #a8a8a8;
+  border-radius: 5px;
+  height: 6.64px;
+  width: 100%;
+}
+
+.verification__load span {
+  height: 100%;
+  display: block;
+  background: #a31aff;
+  border-radius: 5px;
+  -webkit-transition: all 0.12s ease-in-out;
+  -o-transition: all 0.12s ease-in-out;
+  transition: all 0.12s ease-in-out;
+}
+
+.verification__verfComlpite {
+  margin-top: 14px;
+  padding-left: 23px;
+  padding-right: 23px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  position: relative;
+  z-index: 1;
+}
+
+.verification__verfComlpite:not(.active) {
+  opacity: 0;
+  -webkit-transform: translateY(-140px);
+  -ms-transform: translateY(-140px);
+  transform: translateY(-140px);
+}
+
+.verification__verfComlpite .button {
+  margin-top: 14px;
+  border-radius: 56px;
+  padding: 16px 53px;
+  font-size: 30px;
+  display: block;
+}
+
+.verification .timer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding: 12px 50px;
+  width: 482px;
+}
+
+.verification .timer__num {
+  font-size: 40px;
+}
+
+.verification .timer__name {
+  font-size: 20px;
+}
+
+.verification .timer__item {
+  margin-right: 36px;
+}
+
+.verification .timer__item:last-child {
+  margin-right: 0;
+}
+
+.verification .timer__item:before,
+.verification .timer__item:after {
+  width: 5.24px;
+  height: 5.24px;
+  right: -24px;
+  top: 17px;
+}
+
+.verification .timer__item:after {
+  top: 34px;
+}
+
+.verification .timer .txt30x36 {
+  width: 100%;
+  margin-bottom: 14px;
+}
+
+.verification + .footer {
+  margin-top: -76px;
+  padding-top: 266px;
+}
+
+.verification + .footer::before {
+  top: 266px;
+  -webkit-box-shadow: 0 -185px 120px -40px rgba(163, 26, 255, 0.5);
+  box-shadow: 0 -185px 120px -40px rgba(163, 26, 255, 0.5);
+}
+
+.verification + .footer:after {
+  content: "";
+  display: block;
+  width: 368px;
+  height: 346px;
+  position: absolute;
+  z-index: -1;
+  top: 0px;
+  right: 137px;
+  background: url("../img/giftFooter.png") center/contain no-repeat;
+}
+
 /* ================================================= */
 
 /* ================================================= */
@@ -1081,6 +1435,13 @@ ol {
   .blockWarb__grid li:nth-child(3),
   .blockWarb__grid li:nth-child(4) {
     margin-bottom: 0;
+  }
+
+  .verification .timer {
+    position: absolute;
+    left: 184px;
+    top: 513px;
+    border-radius: 17px;
   }
 
   .headWin {
@@ -1255,12 +1616,12 @@ ol {
   }
 
   .review__video {
-    max-width: 58.5858vw;
+    max-width: 81.8181vw;
     margin-top: 2.7272vw;
   }
 
   .review__video .swiperSlide {
-    width: calc(25% - 0.8585vw);
+    width: 18.5353vw;
     height: 32.9797vw;
     border: 0.202vw solid #a31aff;
     -webkit-box-shadow: 0 0 1.0101vw -0.101vw #a31aff;
@@ -1412,12 +1773,248 @@ ol {
   .footer__text {
     font-size: 1.2626vw;
   }
+
+  .loader {
+    width: 2.6262vw;
+    height: 2.6262vw;
+  }
+
+  .loader div {
+    -webkit-transform-origin: 1.3131vw 1.4141vw;
+    -ms-transform-origin: 1.3131vw 1.4141vw;
+    transform-origin: 1.3131vw 1.4141vw;
+  }
+
+  .loader div:after {
+    top: 0.1515vw;
+    width: 0.08484vw;
+    height: 0.808vw;
+    border-radius: 0.1515vw;
+  }
+
+  .verification {
+    padding-top: 9.9494vw;
+  }
+
+  .verification .timer {
+    left: 9.2929vw;
+    top: 25.909vw;
+  }
+
+  .verification__img {
+    margin-right: -1.111vw;
+    width: 33.0303vw;
+    height: 36.8191vw;
+  }
+
+  .verification__img img:nth-child(2) {
+    display: none;
+  }
+
+  .verification__cnt {
+    padding-top: 4.0404vw;
+  }
+
+  .verification__verf {
+    margin-top: 0.808vw;
+    padding-left: 1.1616vw;
+    padding-right: 1.1616vw;
+  }
+
+  .verification__subTitle {
+    margin-bottom: 1.1111vw;
+    max-width: 17.4747vw;
+  }
+
+  .verification__anim {
+    border-radius: 0.8585vw;
+    padding: 0.7575vw 0.707vw 0.808vw;
+    width: 16.2626vw;
+  }
+
+  .verification__anim .loader {
+    margin-bottom: 0.707vw;
+  }
+
+  .verification__load {
+    margin-top: 0.606vw;
+    border-radius: 0.2525vw;
+    height: 0.3353vw;
+  }
+
+  .verification__load span {
+    border-radius: 0.2525vw;
+  }
+
+  .verification__verfComlpite {
+    margin-top: 0.707vw;
+    padding-left: 1.1616vw;
+    padding-right: 1.1616vw;
+  }
+
+  .verification__verfComlpite:not(.active) {
+    -webkit-transform: translateY(-7.0707vw);
+    -ms-transform: translateY(-7.0707vw);
+    transform: translateY(-7.0707vw);
+  }
+
+  .verification__verfComlpite .button {
+    margin-top: 0.707vw;
+    border-radius: 2.8282vw;
+    padding: 0.808vw 2.6767vw;
+    font-size: 1.5151vw;
+  }
+
+  .verification .timer {
+    padding: 0.606vw 2.5252vw;
+    width: 24.3434vw;
+  }
+
+  .verification .timer__num {
+    font-size: 2.0202vw;
+  }
+
+  .verification .timer__name {
+    font-size: 1.0101vw;
+  }
+
+  .verification .timer__item {
+    margin-right: 1.8181vw;
+  }
+
+  .verification .timer__item:before,
+  .verification .timer__item:after {
+    width: 0.2646vw;
+    height: 0.2646vw;
+    right: -1.2121vw;
+    top: 0.8686vw;
+  }
+
+  .verification .timer__item:after {
+    top: 1.7171vw;
+  }
+
+  .verification .timer .txt30x36 {
+    margin-bottom: 0.707vw;
+  }
+
+  .verification + .footer {
+    margin-top: -3.8383vw;
+    padding-top: 13.4343vw;
+  }
+
+  .verification + .footer::before {
+    top: 13.4343vw;
+    -webkit-box-shadow: 0 -7.3443vw 4.0404vw -1.0101vw rgba(163, 26, 255, 0.5);
+    box-shadow: 0 -7.3443vw 4.0404vw -1.0101vw rgba(163, 26, 255, 0.5);
+  }
+
+  .verification + .footer:after {
+    width: 18.5858vw;
+    height: 17.4747vw;
+    right: 6.9191vw;
+  }
 }
 
 @media screen and (max-width: 992px) {
   .wrapper {
     padding-left: 30px;
     padding-right: 30px;
+  }
+
+  .verification {
+    padding-top: 26.3838vw;
+  }
+
+  .verification__anim {
+    width: 70.5555vw;
+  }
+
+  .verification__verfComlpite .button {
+    width: 81.111vw;
+    padding: 3.888vw 11.666vw;
+    font-size: 7.222vw;
+    border-radius: 15.555vw;
+  }
+
+  .verification__img {
+    width: 71.388vw;
+    height: 97.222vw;
+    margin-bottom: -36.111vw;
+  }
+
+  .verification__img img:nth-child(1) {
+    display: none;
+  }
+
+  .verification__wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+
+  .verification .timer {
+    padding: 2.222vw 3.8888vw;
+    width: 64.6666vw;
+    border-radius: 2.22vw;
+  }
+
+  .verification .timer__item {
+    margin-right: 5.2777vw;
+  }
+
+  .verification .timer__item:after,
+  .verification .timer__item:before {
+    width: 1.0277vw;
+    height: 1.0277vw;
+    right: -3.333vw;
+    top: 3vw;
+  }
+
+  .verification .timer__item:after {
+    top: 5.777vw;
+  }
+
+  .verification .timer__num {
+    font-size: 6.944vw;
+  }
+
+  .verification .timer__name {
+    font-size: 2.777vw;
+  }
+
+  .verification__cnt {
+    padding-top: 0;
+  }
+
+  .verification__cnt .txt50x60 {
+    text-align: center;
+    position: absolute;
+    top: -16.666vw;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+    width: 70.555vw;
+  }
+
+  .verification + .footer {
+    padding-top: 34.444vw;
+    margin-top: 0;
+  }
+
+  .verification + .footer::before {
+    top: 38.444vw;
+    -webkit-box-shadow: 0 -14.444vw 18.333vw -4.444vw rgba(163, 26, 255, 0.5);
+    box-shadow: 0 -14.444vw 18.333vw -4.444vw rgba(163, 26, 255, 0.5);
+  }
+
+  .verification + .footer:after {
+    display: none;
   }
 
   .swiper {
@@ -1480,6 +2077,30 @@ ol {
     max-width: 340px;
     margin: auto;
     height: 720px;
+  }
+
+  .review__video:not(.swiper) {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+  }
+
+  .review__video:not(.swiper) video {
+    height: 100% !important;
+  }
+
+  .review__video .swiperSlide {
+    -webkit-transform: translate(0);
+    -ms-transform: translate(0);
+    transform: translate(0);
+    margin: auto;
+    margin-bottom: 30px;
+  }
+
+  .review__video .swiperSlide video {
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
   }
 
   .headWin__block {
@@ -1668,6 +2289,11 @@ ol {
   .footer__text {
     font-size: 15px;
     line-height: 18px;
+  }
+
+  .review__video .swiperSlide {
+    height: 148.0468vw;
+    width: 84.333vw;
   }
 
   .footer {
@@ -1952,11 +2578,22 @@ ol {
 }
 
 @media screen and (max-width: 480px) {
-  .footer__wrapper {
-    max-width: 242px;
+  .footer__text {
+    max-width: 163px;
   }
 
   .review__video .video video {
     height: 520px;
+  }
+}
+
+@media screen and (max-width: 992px) and (min-width: 768px) {
+  .review__video .swiperSlide:nth-child(2n-1) {
+    margin-right: 20px;
+    padding-left: -20px;
+  }
+
+  .review__video .swiperSlide:nth-child(2n-1) {
+    margin-right: -20px;
   }
 }
